--- a/blog style work2.css
+++ b/blog style work2.css
@@ -837,25 +837,118 @@ color:antiquewhite;
   font-size:50px ;
   color: whitesmoke;
 }
-     <form action="login.php"class="login">
-           <div class="inputbx">
-           <span>User Name</span>
-           <input type="textbox" name="" required>
-           </div>
-           <div class="inputbx">
-           <span>Password</span>
-           <input type="text" name="" required>
-           </div>
-           <div class="rembemer">
-           <label> <input type="checkbox" name="">Rembemer Me</label>    
-           </div>
-           <div class="inputbx">
-           <input type="submit" value="Sign In" name="">
-            </div>
-            <div class="inputbx">
-              <p>
-                Don't have an account <a href="#">Sign up</a>
-              </p>
+section{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+}
+section .imgbox{
+    position: relative;
+    width: 50%;
+    height: 100%;
+}
+section .imgbox:before{
+    content: '';
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(225deg,#e91e63,#03a9f2);
+    z-index:1;
+    mix-blend-mode: screen;
 
-            </div>
-            </form>
+}
+section.imgbox img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.conl {
+    display: flex;
+    width: 150%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+section .conl .formbox h2{
+    color: #607d8b;
+    font-weight: 600;
+    font-size: 1.6em;
+    display: inline-block;
+    letter-spacing: 1px;
+    border-bottom: 4px solid #ff4584;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+section .imgbox{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width:100%;
+    height: 100%;
+}
+section .conl{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;z-index:1;
+}
+section .imgbox .conl {
+width: 100%;
+padding: 40px;
+background: rgb(255 255 255 / 0.9);
+margin:50px ;
+}
+section .conl .formbox .inputbx {
+    margin-bottom: 20px;
+}
+section .conl .formbox .inputbx span{
+    font-size: 16px;
+    margin-bottom:5px;
+    display: inline-block;
+    color:#607d8b;
+    font-weight: 300;
+    font-size: 16px;
+    letter-spacing:1px;
+}
+section .conl .formbox .inputbx input{
+    width: 100%;
+    padding: 10px 20px;
+    outline: none;
+    font-weight: 400;
+    border: 4px solid #607d8b;
+    font-size: 16px;
+    letter-spacing: 1px;
+    color:#607d8b;
+    background:transparent;
+    border-radius: 30px;
+}
+section .conl .formbox .inputbx input[type="submit"]{
+    background-color: #ff4584;
+    color: #fff;
+    outline: none;
+    border: none;
+    font-weight: 500;
+    cursor: pointer;
+}
+section .conl .formbox .inputbx input[type="submit"]:hover{
+background-color: #f53677;
+}
+section .conl .formbox .remember{
+  margin-bottom: 10px;
+  color: #607d8b;
+  font-weight: 400;
+  font-size: 14px;
+}
+section .conl .formbox .inputbx p{
+color: #607d8b;
+}
+section .conl .formbox .inputbx p{
+color: #ff4584;
+}
