--- a/blog style work2.css
+++ b/blog style work2.css
@@ -897,7 +897,8 @@ section .conl{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;z-index:1;
+    height: 100%;
+    z-index:1;
 }
 section .imgbox .conl {
 width: 100%;
@@ -949,6 +950,6 @@ section .conl .formbox .remember{
 section .conl .formbox .inputbx p{
 color: #607d8b;
 }
-section .conl .formbox .inputbx p{
+section .conl .formbox .inputbx a{
 color: #ff4584;
 }
