--- a/blog style work2.css
+++ b/blog style work2.css
@@ -837,119 +837,71 @@ color:antiquewhite;
   font-size:50px ;
   color: whitesmoke;
 }
-section{
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-}
-section .imgbox{
-    position: relative;
-    width: 50%;
-    height: 100%;
-}
-section .imgbox:before{
-    content: '';
-    position: absolute;
-    top:0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(225deg,#e91e63,#03a9f2);
-    z-index:1;
-    mix-blend-mode: screen;
+* {box-sizing: border-box}
 
+/* Full-width input fields */
+  input[type=text], input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
 }
-section.imgbox img{
-    position: absolute;
-    top: 0;
-    left: 0;
+
+input[type=text]:focus, input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+hr {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
+}
+
+/* Set a style for all buttons */
+button {
+  background-color: #04AA6D;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+}
+
+button:hover {
+  opacity:1;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+  padding: 14px 20px;
+  background-color: #f44336;
+}
+
+/* Float cancel and signup buttons and add an equal width */
+.cancelbtn, .signupbtn {
+  float: left;
+  width: 50%;
+}
+
+/* Add padding to contain elements */
+.contain {
+  padding: 16px;
+}
+
+/* Clear floats */
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+/* Change styles for cancel button and signup button on extra small screens */
+@media screen and (max-width: 300px) {
+  .cancelbtn, .signupbtn {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.conl {
-    display: flex;
-    width: 150%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-}
-section .conl .formbox h2{
-    color: #607d8b;
-    font-weight: 600;
-    font-size: 1.6em;
-    display: inline-block;
-    letter-spacing: 1px;
-    border-bottom: 4px solid #ff4584;
-    text-transform: uppercase;
-    margin-bottom: 20px;
-}
-section .imgbox{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width:100%;
-    height: 100%;
-}
-section .conl{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    z-index:1;
-}
-section .imgbox .conl {
-width: 100%;
-padding: 40px;
-background: rgb(255 255 255 / 0.9);
-margin:50px ;
-}
-section .conl .formbox .inputbx {
-    margin-bottom: 20px;
-}
-section .conl .formbox .inputbx span{
-    font-size: 16px;
-    margin-bottom:5px;
-    display: inline-block;
-    color:#607d8b;
-    font-weight: 300;
-    font-size: 16px;
-    letter-spacing:1px;
-}
-section .conl .formbox .inputbx input{
-    width: 100%;
-    padding: 10px 20px;
-    outline: none;
-    font-weight: 400;
-    border: 4px solid #607d8b;
-    font-size: 16px;
-    letter-spacing: 1px;
-    color:#607d8b;
-    background:transparent;
-    border-radius: 30px;
-}
-section .conl .formbox .inputbx input[type="submit"]{
-    background-color: #ff4584;
-    color: #fff;
-    outline: none;
-    border: none;
-    font-weight: 500;
-    cursor: pointer;
-}
-section .conl .formbox .inputbx input[type="submit"]:hover{
-background-color: #f53677;
-}
-section .conl .formbox .remember{
-  margin-bottom: 10px;
-  color: #607d8b;
-  font-weight: 400;
-  font-size: 14px;
-}
-section .conl .formbox .inputbx p{
-color: #607d8b;
-}
-section .conl .formbox .inputbx a{
-color: #ff4584;
+  }
 }
