--- a/blog style work2.css
+++ b/blog style work2.css
@@ -907,6 +907,7 @@ button:hover {
   margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
+  color: black;
 }
 
 /* Style the horizontal ruler */
@@ -937,8 +938,6 @@ hr {
   clear: both;
   display: table;
 }
-
-/* Change styles for cancel button and signup button on extra small screens */
 @media screen and (max-width: 300px) {
   .cancelbtn, .signupbtn {
      width: 100%;
