Update blog style work2.css

--- a/blog style work2.css
+++ b/blog style work2.css
@@ -908,6 +908,7 @@ button:hover {
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
   color: black;
+  text-align:left;
 }
 
 /* Style the horizontal ruler */
