--- a/blog style work2.css
+++ b/blog style work2.css
@@ -855,7 +855,7 @@ input[type=text]:focus, input[type=password]:focus {
 }
 
 /* Set a style for all buttons */
-button {
+.clearfix{
   background-color: #04AA6D;
   color: white;
   padding: 14px 20px;
