--- a/blog style work2.css
+++ b/blog style work2.css
@@ -836,10 +836,11 @@ color:antiquewhite;
 .y h1{
   font-size:50px ;
   color: whitesmoke;
-}* {box-sizing: border-box;}
+}
+* {box-sizing: border-box;}
 
 /* Full-width input fields */
-input[type=text], input[type=password] {
+.modal input[type=text], input[type=password] {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
@@ -849,13 +850,13 @@ input[type=text], input[type=password] {
 }
 
 /* Add a background color when the inputs get focus */
-input[type=text]:focus, input[type=password]:focus {
+.modal input[type=text]:focus, input[type=password]:focus {
   background-color: #ddd;
   outline: none;
 }
 
 /* Set a style for all buttons */
-.clearfix{
+.modal button{
   background-color: #04AA6D;
   color: white;
   padding: 14px 20px;
@@ -866,24 +867,24 @@ input[type=text]:focus, input[type=password]:focus {
   opacity: 0.9;
 }
 
-button:hover {
+.modal button:hover {
   opacity:1;
 }
 
 /* Extra styles for the cancel button */
-.cancelbtn {
+.modal .cancelbtn {
   padding: 14px 20px;
   background-color: #f44336;
 }
 
 /* Float cancel and signup buttons and add an equal width */
-.cancelbtn, .signupbtn {
+.modal .cancelbtn, .signupbtn {
   float: left;
   width: 50%;
 }
 
 /* Add padding to container elements */
-.contain {
+.modal .contain {
   padding: 16px;
 }
 
@@ -912,13 +913,13 @@ button:hover {
 }
 
 /* Style the horizontal ruler */
-hr {
+.modal hr {
   border: 1px solid #f1f1f1;
   margin-bottom: 25px;
 }
  
 /* The Close Button (x) */
-.close {
+.model .close {
   position: absolute;
   right: 35px;
   top: 15px;
@@ -927,20 +928,20 @@ hr {
   color: #f1f1f1;
 }
 
-.close:hover,
+.model .close:hover,
 .close:focus {
   color: #f44336;
   cursor: pointer;
 }
 
 /* Clear floats */
-.clearfix::after {
+.model .clearfix::after {
   content: "";
   clear: both;
-  display: table;
+  display:table;
 }
 @media screen and (max-width: 300px) {
-  .cancelbtn, .signupbtn {
+  .model .cancelbtn, .signupbtn {
      width: 100%;
   }
 }
