--- a/blog style work2.css
+++ b/blog style work2.css
@@ -295,7 +295,7 @@ input[type=email]{
   margin-bottom: 16px;
   resize: vertical;
 }
-input[type=submit] {
+.container input[type=submit] {
   background-color: #04AA6D;
   color: white;
   padding: 12px 20px;
@@ -303,7 +303,7 @@ input[type=submit] {
   border-radius: 4px;
   cursor: pointer;
 }
-input[type=submit]:hover {
+.container input[type=submit]:hover {
   background-color: #45a049;
 }
 .container {
@@ -944,7 +944,7 @@ color:antiquewhite;
     color: black;
     text-align:left;
 }
-.s{
+button .s{
    color: green;
   width: 70px;
   height: 30px;
