--- a/blog style work2.css
+++ b/blog style work2.css
@@ -954,7 +954,8 @@ button .s{
   border:20p;
 }
 clearfix{
-    display:flex;
+    width:60%;
+    height:30%
 }
 .s:hover{
     background-color: green;
