Update blog style work2.css

--- a/blog style work2.css
+++ b/blog style work2.css
@@ -980,7 +980,7 @@ color:antiquewhite;
   transform: scale(1.5); 
 }
     .kb{
-   background-image:url("https://images.app.goo.gl/6f3P7ieU7E1rddHm9");
+   background-image:url(".../train/images/download-1.jpg");
    background-size: cover;
    font-size: 50px;
    color: whitesmoke;
@@ -995,7 +995,7 @@ color:antiquewhite;
   transform: scale(1.5); 
 }
 .hb{
-   background-image:url("https://images.app.goo.gl/h4vaEvZDHas3xmn5A");
+   background-image:url(".../train/images/wireless-sound-audio-headphones-colored-banner-background-music-app-listening-podcasts-r_90380-3186.webp");
    background-size: cover;
    font-size: 50px;
    color: whitesmoke;
