Update blog style work2.css

--- a/blog style work2.css
+++ b/blog style work2.css
@@ -965,7 +965,7 @@ color:antiquewhite;
     color: white;
 }
 .mb{
-    background-color: #6e2b42fb;
+    background-color:pink;
  width:40%;
     height:30%;
     font-size: 50px;
@@ -999,7 +999,7 @@ color:antiquewhite;
   transform: scale(1.5); 
 }
 .hb{
-    background-color: #f53677;
+    background-color:hotpink;
    width:40%;
     height:30%;
     font-size: 50px;
