--- a/blog style work2.css
+++ b/blog style work2.css
@@ -350,7 +350,7 @@ nav.p1{
 .p1 p{
   font-size: 30px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  color: #ccc;
+  color:black;
 }
 button.cr1{
   border-radius: 4px;
